package LEBOCQTitouan.edu.model.commands.shockwave.factory;

public enum ShockwaveCommandType {
    PROPAGATION
}