package LEBOCQTitouan.edu.model.commands.waterpipe;

import LEBOCQTitouan.edu.model.commands.InterMediatorCommand;

public abstract class WaterpipeCommand implements InterMediatorCommand {}
